--- a/leetcode/560.md
+++ b/leetcode/560.md
@@ -1,3 +1,11 @@
+## 思路
+
+这题首先很容易想到的就是使用前缀和去加速子串和的计算，若是没有前缀和，那么我们需要O(n^3)的时间复杂度，即首先确定子串需要O(n^2)，随后计算这个子串的和需要O(n)。有了前缀和的帮助，可以省去计算子串和O(n)的开销，因此时间复杂度变为O(n^2)。
+
+但是这题还有更进一步的优化方法，利用O(n)的空间复杂度将时间复杂度进一步降低至O(n)。即当我们拥有前缀和的数组preSums之后，对于preSums中的每个元素preSums[i]，我们就是想要确定存在多少个其他preSums中的元素preSums[j]，满足j < i 且 preSums[i] - preSums[j] = k。这样问题就转换成了简单题：两数之和。因此我们可以用一个哈希表去加速，哈希表的key为preSums中的元素的值，value为该值出现了几次。
+
+但是这里有个问题需要注意，前面提到的条件是j < i 且 preSums[i] - preSums[j] = k，之所以需要j < i，是为了避免出现下标较小的前缀和值去减下标较大的前缀和。但是要怎么做到这一点呢？最开始我是将map的value变成list，在计算前缀和时，将前缀和的下标add到对应的list中，这样list中可能会有多个下标。但是这种方式会导致代码超时，可能是因为list的构建和遍历比较费时。这里有个巧妙的办法，就是在实际计算符合条件的子串过程中，一边遍历一边将前缀和放到map中，这样在map中找符合条件的preSums[j]时，j肯定是小于i的，因为大于等于i的preSums还没放到map里。
+
 ## 代码
 
 ```java
