--- a/leetcode/560.md
+++ b/leetcode/560.md
@@ -1,3 +1,4 @@
+# leetcode 560 和为k的子数组
 ## 思路
 
 这题首先很容易想到的就是使用前缀和去加速子串和的计算，若是没有前缀和，那么我们需要O(n^3)的时间复杂度，即首先确定子串需要O(n^2)，随后计算这个子串的和需要O(n)。有了前缀和的帮助，可以省去计算子串和O(n)的开销，因此时间复杂度变为O(n^2)。
