--- a/leetcode/239.md
+++ b/leetcode/239.md
@@ -1,3 +1,23 @@
+# leetcode 239 滑动窗口最大值
+
+## 思路
+
+这题其实思路是非常直接的，因为窗口题目中已经指定好了，因此需要做的就是怎么最快地找到窗口中的最大值。因为是要找窗口的最大值，所以我们很容易就会想到用最大堆。但是最大堆存在两个问题：
+
+1. 元素放入最大堆之后，其顺序是被打乱的，因此当窗口移动时，我们难以将被移出窗口外的元素快速从最大堆中删除，可能需要遍历整个堆；
+2. 最大堆的插入时间复杂度为O(log(n))，因此使用最大堆的整体时间复杂度为O(nlog(n))。
+
+其实第一个问题还是可以解决的，那就是最大堆中存{元素，下标}这样的组合，这样每次需要取最大值时，如果该值不在窗口范围内，就丢弃，直到找到一个在窗口范围内的最大值。但是本质问题还是时间复杂度还有优化空间。
+
+到了这里其实我也没有什么思路了，单调队列确实不熟。因此这里重点记录下对单调队列的理解。
+
+单调队列的主要性质是其中的元素从队头到队尾始终是单调的。我们下面以最大单调队列为例，那么队首就是最大值，队尾就是最小值。那么这个最大单调队列怎么维护呢？
+
+1. 新增元素时，与队尾元素比较，如果比队尾元素大，则删除队尾元素，然后再与队尾元素比较，如此往复，直到队尾比该元素大或者队列为空，此时将该元素放到队尾；
+2. 删除元素则是直接删除对头的元素。
+
+另外，单调队列还有个重要的性质，就是其最大值肯定是
+
 ## 代码
 
 ```java
