--- a/leetcode/239.md
+++ b/leetcode/239.md
@@ -16,7 +16,10 @@
 1. 新增元素时，与队尾元素比较，如果比队尾元素大，则删除队尾元素，然后再与队尾元素比较，如此往复，直到队尾比该元素大或者队列为空，此时将该元素放到队尾；
 2. 删除元素则是直接删除对头的元素。
 
-另外，单调队列还有个重要的性质，就是其最大值肯定是
+单调队列还有个重要的性质使得其特别适用于求解本题，对于数组nums，如果nums[i]在单调队列中，那么对于任意num[j]，j < i：
+1. 如果nums[j]在单调队列中，则nums[j]必定大于nums[i]；
+2. 如果nums[j]不在单调队列中，则nums[j]必定小于nums[i]；
+我们换个角度来理解第二点，即如果一个数的下标比num[i]小，相当于在nums[i]前面，并且它的值还比nums[i]小，那么这个值就没有存在的必要了，因为在包含num[i]的窗口中，最大值必定不会是这个值。
 
 ## 代码
 
