--- a/leetcode/239.md
+++ b/leetcode/239.md
@@ -19,7 +19,13 @@
 单调队列还有个重要的性质使得其特别适用于求解本题，对于数组nums，如果nums[i]在单调队列中，那么对于任意num[j]，j < i：
 1. 如果nums[j]在单调队列中，则nums[j]必定大于nums[i]；
 2. 如果nums[j]不在单调队列中，则nums[j]必定小于nums[i]；
+
 我们换个角度来理解第二点，即如果一个数的下标比num[i]小，相当于在nums[i]前面，并且它的值还比nums[i]小，那么这个值就没有存在的必要了，因为在包含num[i]的窗口中，最大值必定不会是这个值。
+
+有了单调队列的帮助，解决本题就变得非常简单：
+
+1. 首先初始化窗口，即将前k个元素加入单调队列中，队列第一个元素即为第一个窗口的最大值；
+2. 随后每次移动窗口，判断队头元素，若队头元素已经不属于当前窗口范围，则将其出队；将新加入窗口的元素放到队尾。此时队头元素即为当前窗口最大值。
 
 ## 代码
 
